# FauSDR

./: CMakeLists.txt  Cargo.toml  README.md  flake.nix  result
arch/: soapy-sdr-lib.cpp  soapy-sdr.cpp
dcf/: AUDIO_NET_README.md  DEMODULATOR_README.md  config.schema.json
dcf/go/: go.mod
doc/: ModDemod_Interactive.html  acoustic_fsk_guide.docx  demod_demo_guide.docx
dsp/: CoherentDemod.dsp  RingMod.dsp  acoustic_fsk_demod.dsp  acoustic_fsk_mod.dsp  ask_demod.dsp  ask_mod.dsp  bpsk_demod.dsp  demod_hs.dsp  demodulator_audionet.dsp  demodulator_audionet_legacy.dsp  demodulator_audionet_mono.dsp  demodulator_audionet_stereo.dsp  fsk_demod.dsp  fsk_mod.dsp  gmsk_demod.dsp  gmsk_mod.dsp  jack_demod.dsp  jack_mod.dsp  modulator.dsp  modulator_audionet.dsp  modulator_audionet_legacy.dsp  modulator_audionet_mono.dsp  modulator_audionet_stereo.dsp  modulator_hs.dsp  qpsk_demod.dsp  qpsk_mod.dsp  wideband_demod.dsp  wideband_mod.dsp
gr-demod/: CMakeLists.txt
gr-demod/python/: __init__.py
gr-demod/python/demod/: dcf_frame_sink.py  dcf_frame_source.py  qa_dcf_frame.py
haskell/: dcf-faust-sdr.cabal  flake.nix
haskell/app/: AcousticHelloRx.hs  AcousticHelloTx.hs  Main.hs  RxMain.hs
haskell/cbits/: faust_bridge.cpp  faust_bridge.h  soapy_bridge.cpp  soapy_bridge.h
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.10.3/: dcf-faust-sdr-0.3.0.0-inplace.conf  package.cache
haskell/dsp/: Modulator.hs  modulator_hs.dsp
haskell/src/: Channel.hs  DSP.hs  Device.hs  FFI.hs  Metrics.hs  MusicSpec.hs  SoapyFFI.hs  Spec.hs  Symbol.hs
haskell/src/DCF/: Demodulator.hs  Modulator.hs  Runner.hs  Sim.hs
haskell/src/DCF/Faust/: DSP.hs  FFI.hs
haskell/src/DCF/Modem/: AcousticFSK.hs  QPSK.hs  Wideband.hs
haskell/src/DCF/SDR/: Device.hs  SoapyFFI.hs
haskell/src/DCF/Transport/: Frame.hs  JackFrame.hs
haskell/test/: AudioSpec.hs  ConformanceSpec.hs  FrameSpec.hs  JackFrameSpec.hs  Spec.hs
lisp/: hydramesh.lisp
src/: build.rs  faust.rs  lib.rs  modulator_hs.rs  test_conformance.cpp  test_frame.cpp
tests/: conformance.rs  frame_tests.rs
transport/: demod_frame.h  frame.go  jackframe.h
