cabal-version:      3.4
name:               dcf-faust-sdr
version:            0.2.1.0
synopsis:           DeMoD Faust-SDR Haskell TX pipeline
description:
  Haskell layer for the DeMoD Faust-SDR system.
  Owns: 17-byte transport frame (CRC-CCITT), BPSK symbol encoding,
  and the top-level TX pipeline. Delegates DSP compute to Faust via
  C++ FFI (cbits/faust_bridge.cpp) and IQ output to SoapySDR via
  C FFI (cbits/soapy_bridge.cpp).
license:            GPL-3.0-only
author:             DeMoD LLC
maintainer:         info@demod.ltd
category:           Hardware, DSP, Network
build-type:         Simple

-- Require GHC 9.4+ for GHC2021 default-language and vector-storable-mutable API.
tested-with: GHC == 9.6.6

common opts
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wunused-imports
    -Wunused-matches
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

-- ── Library ───────────────────────────────────────────────────────────────────

library
  import:           opts
  hs-source-dirs:   src

  exposed-modules:
    DCF.Faust.FFI
    DCF.Faust.DSP
    DCF.SDR.SoapyFFI
    DCF.SDR.Device
    DCF.Transport.Frame
    DCF.Transport.Symbol
    DCF.Modulator

  -- BUG FIX: cbits/faust_bridge.cpp and cbits/soapy_bridge.cpp are C++ source
  -- files.  Cabal's `c-sources` stanza compiles with cc (C compiler), which
  -- will fail on C++ constructs (new, delete, namespaces, exceptions).
  -- The correct stanza for C++ is `cxx-sources`.
  --
  -- Additionally, `cxx-options` passes -std=c++17 to clang++.  Without this,
  -- GHC's default C++ compile invocation uses whatever the system default is,
  -- which may be c++14 or c++11 and will fail on structured bindings / if-init
  -- used in the bridge.
  cxx-sources:
    cbits/faust_bridge.cpp
    cbits/soapy_bridge.cpp

  cxx-options:
    -std=c++17
    -O2
    -fPIC

  include-dirs:   cbits

  -- stdc++ must be in extra-libraries, not pkgconfig-depends.
  -- SoapySDR is linked via pkgconfig (provides the -I and -L flags).
  extra-libraries:
    stdc++
    m

  pkgconfig-depends:
    SoapySDR

  build-depends:
      base              >= 4.17 && < 5
    , binary            >= 0.8
    , bytestring        >= 0.11
    , vector            >= 0.13
    , time              >= 1.12

-- ── Executable ────────────────────────────────────────────────────────────────

executable demod-sdr-hs
  import:         opts
  main-is:        Main.hs
  hs-source-dirs: app

  build-depends:
      base
    , dcf-faust-sdr

-- ── Test suite ────────────────────────────────────────────────────────────────

test-suite frame-tests
  import:           opts
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:    FrameSpec

  build-depends:
      base
    , dcf-faust-sdr
    , bytestring       >= 0.11
    , vector           >= 0.13
    , hspec            >= 2.11
    , QuickCheck       >= 2.14
