cabal-version:      3.4
name:               dcf-faust-sdr
version:            0.3.0.0
synopsis:           DeMoD Faust-SDR Haskell TX/RX pipeline
description:
  Haskell layer for the DeMoD Faust-SDR system.
  Owns: 17-byte transport frame (CRC-CCITT), BPSK/QPSK symbol encoding,
  TX modulator pipeline (Faust DSP + SoapySDR TX), and RX demodulator
  pipeline (SoapySDR RX + Faust BPSK demod + soft-symbol slicer + frame
  decoder). Delegates DSP compute to Faust via C++ FFI
  (cbits/faust_bridge.cpp) and IQ I/O to SoapySDR via C FFI
  (cbits/soapy_bridge.cpp).
license:            GPL-3.0-only
author:             DeMoD LLC
maintainer:         info@demod.ltd
category:           Hardware, DSP, Network
build-type:         Simple

tested-with: GHC == 9.6.6

common opts
  default-language: GHC2021
  ghc-options:
    -Wall
    -Wunused-imports
    -Wunused-matches
    -Wincomplete-uni-patterns
    -Wmissing-signatures
    -O2
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

-- ── Library ───────────────────────────────────────────────────────────────────

library
  import:           opts
  hs-source-dirs:   src

  exposed-modules:
    DCF.Faust.FFI
    DCF.Faust.DSP
    DCF.SDR.SoapyFFI
    DCF.SDR.Device
    DCF.Transport.Frame
    DCF.Transport.JackFrame
    DCF.Transport.Symbol
    DCF.Modulator
    DCF.Demodulator
    DCF.Modem.AcousticFSK
    DCF.Modem.QPSK
    DCF.Modem.Wideband

  cxx-sources:
    cbits/faust_bridge.cpp
    cbits/soapy_bridge.cpp

  cxx-options:
    -std=c++17
    -O2
    -fPIC
    -Wno-error=cpp

  include-dirs:   cbits

  extra-libraries:
    stdc++
    m

  pkgconfig-depends:
    SoapySDR

  build-depends:
      base              >= 4.17 && < 5
    , binary            >= 0.8
    , bytestring        >= 0.11
    , vector            >= 0.13
    , time              >= 1.12
    , transformers      >= 0.5
    , jack              >= 0.7
    , monad-exception   >= 0.4

-- ── TX Executable ─────────────────────────────────────────────────────────────

executable demod-sdr-hs
  import:         opts
  main-is:        Main.hs
  hs-source-dirs: app

  build-depends:
      base
    , dcf-faust-sdr

-- ── RX Executable ─────────────────────────────────────────────────────────────

executable demod-rx-hs
  import:         opts
  main-is:        RxMain.hs
  hs-source-dirs: app

  build-depends:
      base
    , dcf-faust-sdr

-- ── Acoustic Hello TX ─────────────────────────────────────────────────────────

executable acoustic-hello-tx
  import:         opts
  main-is:        AcousticHelloTx.hs
  hs-source-dirs: app

  build-depends:
      base
    , dcf-faust-sdr
    , bytestring        >= 0.11
    , vector            >= 0.13
    , transformers      >= 0.5
    , jack              >= 0.7
    , monad-exception   >= 0.4

-- ── Acoustic Hello RX ─────────────────────────────────────────────────────────

executable acoustic-hello-rx
  import:         opts
  main-is:        AcousticHelloRx.hs
  hs-source-dirs: app

  build-depends:
      base
    , dcf-faust-sdr
    , bytestring        >= 0.11
    , vector            >= 0.13
    , transformers      >= 0.5
    , jack              >= 0.7
    , monad-exception   >= 0.4

-- ── Test suite ────────────────────────────────────────────────────────────────

test-suite frame-tests
  import:           opts
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    FrameSpec
    ConformanceSpec

  build-depends:
      base
    , dcf-faust-sdr
    , bytestring       >= 0.11
    , vector           >= 0.13
    , hspec            >= 2.11
    , QuickCheck       >= 2.14
